[gd_scene load_steps=7 format=3 uid="uid://cog2v3t3e13ca"]

[ext_resource type="Script" path="res://scripts/upgrade_card.gd" id="1_nqlvx"]
[ext_resource type="Texture2D" uid="uid://o657fsw56j0w" path="res://scenes/cards/MaxHealthUpCard-Sheet.png" id="2_tcf8s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0q6r"]
size = Vector2(24, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qh5a"]
atlas = ExtResource("2_tcf8s")
region = Rect2(24, 0, 24, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yqdt"]
atlas = ExtResource("2_tcf8s")
region = Rect2(0, 0, 24, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6wtf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qh5a")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yqdt")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}]

[node name="UpgradeCard" type="Node2D"]
scale = Vector2(8, 8)
script = ExtResource("1_nqlvx")
upgrade_stat = "default"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_y0q6r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a6wtf")
animation = &"back"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
